# CHOLMOD_demo

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
CHOLMOD_demo/: CHOLMOD_demo.c  CHOLMOD_demo.h  CMakeLists.txt
input/: B.vec
